dim/spec/test_input/invalid_attributes/invalid_allowed.dim
cluster:
  type: text
  default: ''
necessary:
  type: single
  default: red
  allowed: red, green
